--- a/Bwl.Imaging.OCR/Bwl.Imaging.OCR/Bwl.Imaging.OCR.vbproj
+++ b/Bwl.Imaging.OCR/Bwl.Imaging.OCR/Bwl.Imaging.OCR.vbproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CF1BA304-7402-46B4-9D06-AB226BC72293}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <StartupObject>
-    </StartupObject>
-    <RootNamespace>Bwl.Imaging</RootNamespace>
-    <AssemblyName>Bwl.Imaging.WinForms</AssemblyName>
+    <ProjectGuid>{D884E221-DC2F-4C9D-BF17-F8ABF5FF10AF}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <StartupObject>Bwl.Imaging.OCR.My.MyApplication</StartupObject>
+    <RootNamespace>Bwl.Imaging.OCR</RootNamespace>
+    <AssemblyName>Bwl.Imaging.OCR</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>Windows</MyType>
+    <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -20,8 +19,8 @@
     <DebugType>full</DebugType>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\debug\dll\</OutputPath>
-    <DocumentationFile>Bwl.Imaging.WinForms.xml</DocumentationFile>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DocumentationFile>Bwl.Imaging.OCR.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -30,8 +29,8 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
-    <OutputPath>..\release\dll\</OutputPath>
-    <DocumentationFile>Bwl.Imaging.WinForms.xml</DocumentationFile>
+    <OutputPath>bin\Release\</OutputPath>
+    <DocumentationFile>Bwl.Imaging.OCR.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -48,33 +47,37 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System" />
     <Import Include="System.Collections" />
     <Import Include="System.Collections.Generic" />
-    <Import Include="System.Diagnostics" />
+    <Import Include="System.Data" />
     <Import Include="System.Drawing" />
-    <Import Include="System.Linq" />
-    <Import Include="System.Threading.Tasks" />
+    <Import Include="System.Diagnostics" />
     <Import Include="System.Windows.Forms" />
+    <Import Include="System.Linq" />
+    <Import Include="System.Xml.Linq" />
+    <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bitmap\DisplayBitmapControl.Designer.vb">
-      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
+    <Compile Include="CharCollection.vb" />
+    <Compile Include="OCRTest.vb">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Bitmap\DisplayBitmapControl.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Objects\DisplayObjectsControl.Designer.vb">
-      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Objects\DisplayObjectsControl.vb">
-      <SubType>UserControl</SubType>
+    <Compile Include="OCRTest.Designer.vb">
+      <DependentUpon>OCRTest.vb</DependentUpon>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -91,20 +94,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="PictureBoxTools.vb" />
+    <Compile Include="RegistrySettings.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Bitmap\DisplayBitmapControl.resx">
-      <DependentUpon>DisplayBitmapControl.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Objects\DisplayObjectsControl.resx">
-      <DependentUpon>DisplayObjectsControl.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OCRTest.resx">
+      <DependentUpon>OCRTest.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -119,17 +119,21 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bwl.Imaging\Bwl.Imaging.vbproj">
+    <ProjectReference Include="..\..\Bwl.Imaging.Unsafe\Bwl.Imaging.Unsafe.csproj">
+      <Project>{e10c92bb-489b-481a-b032-6a52a3d9cd8c}</Project>
+      <Name>Bwl.Imaging.Unsafe</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Bwl.Imaging.WinForms\Bwl.Imaging.WinForms.vbproj">
+      <Project>{cf1ba304-7402-46b4-9d06-ab226bc72293}</Project>
+      <Name>Bwl.Imaging.WinForms</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\bwl.Imaging\bwl.Imaging.vbproj">
       <Project>{33e5778d-caa3-42b6-b144-9ae1da4a00b3}</Project>
-      <Name>Bwl.Imaging</Name>
+      <Name>bwl.Imaging</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="test.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
