Откорректирована проверка заголовка JPEG, добавлен специфический JPEG от камеры 26FWD-IZHS и соотв. юнит-тест.

--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -180,6 +180,9 @@
     <None Include="Resources\YCbCr.jpg" />
     <None Include="Resources\YCbCrK.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\26FWD_IZHS.jpg" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
