--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -86,6 +86,7 @@
       <Link>refs-src\JpegCodec.vb</Link>
     </Compile>
     <Compile Include="BitmapInfoTests.vb" />
+    <Compile Include="VectorTools\VectorToolsTest.vb" />
     <Compile Include="MatrixTests.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -103,6 +104,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="UnsafeTests.vb" />
+    <Compile Include="VectorTools\PolygonTest.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
