--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -9,13 +9,14 @@
     <AssemblyName>Bwl.Imaging.UnitTests</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{F184B08F-C81C-45F6-A57F-5ABD9991F28F}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,6 +52,9 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Drawing.Common.6.0.0\lib\net461\System.Drawing.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -92,6 +96,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -126,20 +131,21 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Bwl.Imaging\Bwl.Imaging.vbproj">
+      <Project>{9887cecf-3314-4e2c-9110-0de24070d08a}</Project>
+      <Name>Bwl.Imaging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Bwl.Imaging.Unsafe\Bwl.Imaging.Unsafe.csproj">
-      <Project>{e10c92bb-489b-481a-b032-6a52a3d9cd8c}</Project>
+      <Project>{4f6149e2-3b5c-4f08-a0ad-8a44c1a7ca40}</Project>
       <Name>Bwl.Imaging.Unsafe</Name>
     </ProjectReference>
     <ProjectReference Include="..\Bwl.Imaging.WinForms\Bwl.Imaging.WinForms.vbproj">
       <Project>{cf1ba304-7402-46b4-9d06-ab226bc72293}</Project>
       <Name>Bwl.Imaging.WinForms</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Bwl.Imaging\Bwl.Imaging.vbproj">
-      <Project>{33e5778d-caa3-42b6-b144-9ae1da4a00b3}</Project>
-      <Name>Bwl.Imaging</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Resources\_4x3-rgb.bmp" />
   </ItemGroup>
   <ItemGroup>
