--- a/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
+++ b/bwl.Imaging.Test/bwl.Imaging.Test.vbproj
@@ -10,7 +10,8 @@
     <AssemblyName>bwl.Imaging.Test</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsFormsWithCustomSubMain</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -55,6 +56,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Common, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Drawing.Common.6.0.0\lib\net461\System.Drawing.Common.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -76,6 +80,9 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\refs-src\Serializer.vb">
+      <Link>refs-src\Serializer.vb</Link>
+    </Compile>
     <Compile Include="ColorTest.vb" />
     <Compile Include="HdrTestForm.designer.vb">
       <DependentUpon>HdrTestForm.vb</DependentUpon>
@@ -89,7 +96,6 @@
     <Compile Include="MoveDetectorTest.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Serializer.vb" />
     <Compile Include="TestForm.designer.vb">
       <DependentUpon>TestForm.vb</DependentUpon>
     </Compile>
@@ -100,6 +106,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -148,6 +155,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -164,23 +172,24 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="rapp-client-gui.exe" />
+    <None Include="packages.config" />
     <None Include="Resources\YellowBlock.bmp" />
     <None Include="Resources\RedBlock.bmp" />
     <None Include="Resources\GreenBlock.bmp" />
     <None Include="Resources\BlueBlock.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Bwl.Imaging\Bwl.Imaging.vbproj">
+      <Project>{9887cecf-3314-4e2c-9110-0de24070d08a}</Project>
+      <Name>Bwl.Imaging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Bwl.Imaging.Unsafe\Bwl.Imaging.Unsafe.csproj">
-      <Project>{e10c92bb-489b-481a-b032-6a52a3d9cd8c}</Project>
+      <Project>{4f6149e2-3b5c-4f08-a0ad-8a44c1a7ca40}</Project>
       <Name>Bwl.Imaging.Unsafe</Name>
     </ProjectReference>
     <ProjectReference Include="..\Bwl.Imaging.WinForms\Bwl.Imaging.WinForms.vbproj">
       <Project>{cf1ba304-7402-46b4-9d06-ab226bc72293}</Project>
       <Name>Bwl.Imaging.WinForms</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Bwl.Imaging\Bwl.Imaging.vbproj">
-      <Project>{33e5778d-caa3-42b6-b144-9ae1da4a00b3}</Project>
-      <Name>Bwl.Imaging</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
