--- a/bwl.Imaging/bwl.Imaging.vbproj
+++ b/bwl.Imaging/bwl.Imaging.vbproj
@@ -1,174 +1,44 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
-    <SchemaVersion>
-    </SchemaVersion>
-    <ProjectGuid>{33E5778D-CAA3-42B6-B144-9AE1DA4A00B3}</ProjectGuid>
-    <OutputType>Library</OutputType>
     <RootNamespace>Bwl.Imaging</RootNamespace>
-    <AssemblyName>Bwl.Imaging</AssemblyName>
-    <FileAlignment>512</FileAlignment>
-    <MyType>Windows</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0.0</Version>
+    <PostBuildEvent></PostBuildEvent>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <DefineDebug>true</DefineDebug>
-    <DefineTrace>true</DefineTrace>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\debug\dll\</OutputPath>
-    <DocumentationFile>Bwl.Imaging.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
+    <NoWarn></NoWarn>
+    <WarningsAsErrors>41999,42016,42020,42021,42022</WarningsAsErrors>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <DefineDebug>false</DefineDebug>
-    <DefineTrace>true</DefineTrace>
-    <Optimize>true</Optimize>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\release\dll\</OutputPath>
-    <DocumentationFile>Bwl.Imaging.xml</DocumentationFile>
-    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
-    <Prefer32Bit>false</Prefer32Bit>
-    <RemoveIntegerChecks>true</RemoveIntegerChecks>
+    <DefineTrace>false</DefineTrace>
+    <NoWarn></NoWarn>
+    <WarningsAsErrors>41999,42016,42020,42021,42022</WarningsAsErrors>
   </PropertyGroup>
-  <PropertyGroup>
-    <OptionExplicit>On</OptionExplicit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionCompare>Binary</OptionCompare>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionStrict>Off</OptionStrict>
-  </PropertyGroup>
-  <PropertyGroup>
-    <OptionInfer>On</OptionInfer>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>Always</RunPostBuildEvent>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Runtime.Serialization" />
+    <Compile Include="..\refs-src\JpegCodec.vb" Link="refs-src\JpegCodec.vb" />
   </ItemGroup>
+
   <ItemGroup>
-    <Import Include="Microsoft.VisualBasic" />
-    <Import Include="System" />
-    <Import Include="System.Collections" />
-    <Import Include="System.Collections.Generic" />
-    <Import Include="System.Diagnostics" />
-    <Import Include="System.Drawing" />
-    <Import Include="System.Drawing.Imaging" />
-    <Import Include="System.Linq" />
+    <Folder Include="refs-src\" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="..\refs-src\JpegCodec.vb">
-      <Link>refs-src\JpegCodec.vb</Link>
-    </Compile>
-    <Compile Include="BitmapInfo\BitmapInfo.vb" />
-    <Compile Include="Bitmap\BitmapObject.vb" />
-    <Compile Include="Bitmap\DisplayBitmap.vb" />
-    <Compile Include="Bitmap\DisplayGraphics.vb" />
-    <Compile Include="Bitmap\DisplayObject.vb" />
-    <Compile Include="Bitmap\TextObject.vb" />
-    <Compile Include="Color\IRGBConvertable.vb" />
-    <Compile Include="Geometry\Segment.vb" />
-    <Compile Include="MatrixProcessing\Segmentation.vb" />
-    <Compile Include="StructureMatrix\StructureMatrix.vb" />
-    <Compile Include="StructureMatrix\StructureMatrixHSV.vb" />
-    <Compile Include="StructureMatrix\StructureMatrixRGB.vb" />
-    <Compile Include="Color\HSV.vb" />
-    <Compile Include="Color\RGB.vb" />
-    <Compile Include="RawFrames\BlobContainer.vb" />
-    <Compile Include="RawFrames\RawIntFrame.vb" />
-    <Compile Include="RawFrames\RawIntFrameConverters.vb" />
-    <Compile Include="Matrix\BitmapOperations.vb" />
-    <Compile Include="Matrix\FloatMatrix\CommonFloatMatrix.vb" />
-    <Compile Include="Matrix\FloatMatrix\GrayFloatMatrix.vb" />
-    <Compile Include="Matrix\FloatMatrix\RGBFloatMatrix.vb" />
-    <Compile Include="Matrix\CommonMatrix.vb" />
-    <Compile Include="Matrix\IntPtr\AutoPinner.vb" />
-    <Compile Include="Matrix\RGBMatrix.vb" />
-    <Compile Include="Geometry\ParametersDictionary.vb" />
-    <Compile Include="Geometry\Point\PointC.vb" />
-    <Compile Include="Geometry\Polygon\Line.vb" />
-    <Compile Include="Matrix\BitmapConverter.vb" />
-    <Compile Include="Matrix\GrayMatrix.vb" />
-    <Compile Include="Geometry\Polygon\Polygon.vb" />
-    <Compile Include="Geometry\RectangleFC.vb" />
-    <Compile Include="Geometry\Polygon\Tetragon.vb" />
-    <Compile Include="Geometry\Polygon\Vector.vb" />
-    <Compile Include="MatrixProcessing\Extensions.vb" />
-    <Compile Include="MatrixProcessing\MoveDetector.vb" />
-    <Compile Include="My Project\AssemblyInfo.vb" />
-    <Compile Include="My Project\Application.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Application.myapp</DependentUpon>
-    </Compile>
-    <Compile Include="My Project\Resources.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="My Project\Settings.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="MatrixProcessing\BrightnessStats.vb" />
-    <Compile Include="MatrixProcessing\Filters.vb" />
-    <Compile Include="MatrixProcessing\ImagingMath.vb" />
-    <Compile Include="MatrixProcessing\MatrixTools.vb" />
-    <Compile Include="GeometryProcessing\VectorTools.vb" />
-    <Compile Include="Tools\ImageTools.vb" />
+    <PackageReference Include="Unclassified.NetRevisionTask" Version="0.4.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
+
   <ItemGroup>
-    <EmbeddedResource Include="My Project\Resources.resx">
-      <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
-      <CustomToolNamespace>My.Resources</CustomToolNamespace>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
+    <ProjectReference Include="..\Bwl.Imaging.Unsafe\Bwl.Imaging.Unsafe.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="My Project\Application.myapp">
-      <Generator>MyApplicationCodeGenerator</Generator>
-      <LastGenOutput>Application.Designer.vb</LastGenOutput>
-    </None>
-    <None Include="My Project\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <CustomToolNamespace>My</CustomToolNamespace>
-      <LastGenOutput>Settings.Designer.vb</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{94E38DFF-614B-4CBD-B67C-F211BB35CE8B}" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Bwl.Imaging.Unsafe\Bwl.Imaging.Unsafe.csproj">
-      <Project>{e10c92bb-489b-481a-b032-6a52a3d9cd8c}</Project>
-      <Name>Bwl.Imaging.Unsafe</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
+
   <PropertyGroup>
-    <PreBuildEvent>"$(SolutionDir)tools\NetRevisionTool.exe" /patch "$(ProjectDir)My Project"</PreBuildEvent>
+    <NrtRevisionFormat>{c:ymd.} {c:hms:} {chash:6}</NrtRevisionFormat>
   </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)tools\NetRevisionTool.exe" /restore "$(ProjectDir)My Project"</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
