Добавлен юнит-тест на декодирование JPEG.

--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -196,6 +196,9 @@
   <ItemGroup>
     <None Include="Resources\26FWD_IZHS.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\638067000726558653.jpg" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
