Добавлен модуль SimpleLSB для размещения данных в младших битах байтовых массивов.

--- a/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
+++ b/Bwl.Imaging.UnitTests/Bwl.Imaging.UnitTests.vbproj
@@ -98,6 +98,7 @@
     <Compile Include="Image\BitmapInfo\BitmapInfoTestBase.vb" />
     <Compile Include="Parameters\ParametersDictionaryTest.vb" />
     <Compile Include="RawFrames\RawFrameTests.vb" />
+    <Compile Include="Tools\SimpleLsbTest.vb" />
     <Compile Include="VectorTools\VectorToolsTest.vb" />
     <Compile Include="Image\MatrixTests.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
